<resources>
    <string name="app_name">WhatsApp</string>
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="whatsApp_web">WhatsApp Web</string>
    <string name="starred_messages">Starred messages</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
